# g2v

./: .coveragerc  .flake8  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: main.yml
g2v/: app.py  cli.py  config.py  data_processing.py
